--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,19 @@ body {
   box-sizing: border-box;
   color: rgb(83, 83, 83);
 }
+.quote-container.dark-mode {
+  background-color: rgba(190, 188, 188, 0.333);
+  color: rgba(255, 255, 255, 0.897);
+}
+.quote-container.dark-mode .matching {
+  color: rgb(1, 1, 128);
+  background-color: rgba(226, 222, 222, 0.377);
+}
+.quote-container.dark-mode .unmatching {
+  color: rgb(139, 1, 1);
+  background-color: rgba(226, 222, 222, 0.377);
+}
+
 .quote {
   text-align: center;
 }
